<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">lordhebx</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_event_name">Event Name</string>
<string name="lbl_cafeteria_menu">Cafeteria_Menu</string>
<string name="lbl_events_movie">Events_Movie</string>
<string name="msg_create_event_st2">Create_Event_Staff_Icnos</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_general">General</string>
<string name="lbl_oct2">Oct</string>
<string name="msg_foodselection_i">FoodSelection_Information</string>
<string name="lbl_home_student">Home_Student</string>
<string name="lbl_check_ins">Check-ins</string>
<string name="lbl_food_check_ins">Food Check-ins</string>
<string name="lbl_add_food_box">Add Food box</string>
<string name="msg_active_maria_pi">Active Maria Pitch 9:15 pm outside pitch 3</string>
<string name="lbl_foods">Foods</string>
<string name="msg_visa_applicatio">Visa Application</string>
<string name="lbl_hackathon">Hackathon</string>
<string name="lbl_yumi">Yumi</string>
<string name="msg_fully_digital">fully digital &amp; instant
Transparent and simple</string>
<string name="lbl_report_security">Report_Security</string>
<string name="msg_food_tasted_rea">Food tasted really good I recommend to my
highly intellectual hungry peers.</string>
<string name="lbl_food_name">Food Name</string>
<string name="msg_add_voting_poll">Add Voting poll (Optional)</string>
<string name="lbl_menu_staff">Menu_Staff</string>
<string name="lbl_view_all">View all</string>
<string name="msg_checkin_menu_se">CheckIn_Menu_Security</string>
<string name="msg_just_here_to_se">Just here to see what\u2019s the fuss about.</string>
<string name="lbl_check_in">Check-in</string>
<string name="lbl_biryani_rice">Biryani Rice</string>
<string name="lbl_polls">Polls</string>
<string name="lbl_events">Events</string>
<string name="msg_minimum_2_polls">Minimum 2 polls needed</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_oct">Oct </string>
<string name="lbl_alice">Alice</string>
<string name="lbl_10_10">10 / 10</string>
<string name="lbl_ice_cream_day">Ice Cream Day</string>
<string name="msg_allow_registrat">Allow registration after max cap</string>
<string name="lbl_allow_feedback">Allow Feedback</string>
<string name="lbl_descreption">Descreption</string>
<string name="lbl_hadi_kaddoura">Hadi Kaddoura</string>
<string name="lbl_fooseball_tour">Fooseball Tour</string>
<string name="lbl_todays_food">Todays Food</string>
<string name="lbl_add_event">Add Event</string>
<string name="lbl_add_food">Add Food</string>
<string name="msg_checkin_securit">CheckIn_Security</string>
<string name="msg_create_event_st">Create_Event_Staff</string>
<string name="lbl_aelita">Aelita</string>
<string name="lbl_menu">Menu</string>
<string name="lbl_5_10">5 / 10</string>
<string name="msg_cafeteria_cheki">Cafeteria_chekin_Form</string>
<string name="lbl_movie_night2">Movie night</string>
<string name="lbl_calendar">Calendar</string>
<string name="lbl_feedback">Feedback</string>
<string name="lbl_musuem">Musuem</string>
<string name="lbl_eric">Eric</string>
<string name="lbl_12">12</string>
<string name="lbl_13">13</string>
<string name="lbl_10">10</string>
<string name="lbl_downoad_monthly">Downoad
Monthly</string>
<string name="lbl_11">11</string>
<string name="lbl_addfoods">AddFoods</string>
<string name="lbl_events_football">Events_Football</string>
<string name="lbl_16">16</string>
<string name="msg_flush_extra_box">Flush Extra Boxes</string>
<string name="lbl_17">17</string>
<string name="lbl_14">14</string>
<string name="lbl_15">15</string>
<string name="lbl_971_50_666_9529">971 50 666 9529</string>
<string name="lbl_18">18</string>
<string name="lbl_42_access_hub">42 ACCESS HUB</string>
<string name="lbl_players">Players</string>
<string name="lbl_19">19</string>
<string name="lbl_football">Football</string>
<string name="lbl_quantity">Quantity</string>
<string name="msg_my_highly_inte">My  highly intellectual non-hungry peer 
recommended this food but I didn\u2019t like it.</string>
<string name="lbl_waiting_list">Waiting List</string>
<string name="lbl_scan">Scan</string>
<string name="lbl_save">Save</string>
<string name="lbl_movie_night">Movie Night</string>
<string name="msg_events_movie_fe">Events_Movie_Feedback</string>
<string name="lbl_home_staff">Home_Staff</string>
<string name="lbl_dashboard">Dashboard</string>
<string name="lbl_1">1</string>
<string name="msg_townhall_meetin">Townhall Meeting</string>
<string name="lbl_2">2</string>
<string name="lbl_recent_checkins">Recent Checkins</string>
<string name="lbl_3">3</string>
<string name="lbl_4">4</string>
<string name="lbl_5">5</string>
<string name="lbl_6">6</string>
<string name="lbl_7">7</string>
<string name="lbl_8">8</string>
<string name="lbl_football_match">Football Match</string>
<string name="lbl_34_14">34 / 14</string>
<string name="lbl_9">9</string>
<string name="msg_authorise_with">Authorise with Intra</string>
<string name="lbl_max_capacity">Max Capacity</string>
<string name="msg_very_delecious2">Very delecious biryani rice with biryani rice ingirdients.</string>
<string name="msg_descreption_i">Descreption &amp; ingredients</string>
<string name="lbl_movie">Movie</string>
<string name="msg_jan_10_2022_10">Jan 10, 2022 10:30 am </string>
<string name="msg_movie_night_is">Movie night is best. Also it\u2019s at 4 am</string>
<string name="msg_events_movie_fe2">Events_Movie_Feedback_Add</string>
<string name="lbl_mac_cheese">Mac &amp; Cheese</string>
<string name="lbl_choose_icon">Choose icon</string>
<string name="msg_hadi_hammam_bil">Hadi Hammam Bilal Kazem Faraz will win it!</string>
<string name="msg_cafeteria_check">Cafeteria_Checkin</string>
<string name="msg_how_do_i_use_th">How do I use this?</string>
<string name="lbl_onboard">ONBOARD</string>
<string name="msg_very_delecious">Very delecious mac &amp; cheese with mac and cheese ingirdients.</string>
<string name="msg_events_football">Events_Football_WaitingList</string>
</resources>
