<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="calendarRowModel" type="com.lordhebx.app.modules.calendar.data.model.CalendarRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowgroupthirtyone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupThirtyOne"
            android:layout_height="wrap_content"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_14pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@{calendarRowModel.txtGroupThirtyOne}"
            style="@style/txtSolid" tools:text="@string/lbl_1"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupThirty"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingEnd="@dimen/_16pxh"
            android:paddingStart="@dimen/_13pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@{calendarRowModel.txtGroupThirty}"
            style="@style/txtSolid" tools:text="@string/lbl_2"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupTwentyNine"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_16pxh"
            android:paddingStart="@dimen/_13pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@{calendarRowModel.txtGroupTwentyNine}"
            style="@style/txtSolid_1" tools:text="@string/lbl_3"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupTwentyEight"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_weight="0.15" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_15pxh"
            android:paddingStart="@dimen/_13pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@{calendarRowModel.txtGroupTwentyEight}"
            style="@style/txtSolid" tools:text="@string/lbl_4"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupTwentySeven"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingEnd="@dimen/_17pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@{calendarRowModel.txtGroupTwentySeven}"
            style="@style/txtSolid_1" tools:text="@string/lbl_5"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupTwentySix"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_17pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@{calendarRowModel.txtGroupTwentySix}"
            style="@style/txtSolid" tools:text="@string/lbl_6"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupTwentyFive"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingEnd="@dimen/_14pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@{calendarRowModel.txtGroupTwentyFive}"
            style="@style/txtSolid" tools:text="@string/lbl_7"/>
    </LinearLayout>
</layout>
