<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="addfoodsVM" type="com.lordhebx.app.modules.addfoods.data.viewmodel.AddfoodsVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAddFoods"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearColumnclose"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_136pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylelime_5">
            <ImageView android:id="@+id/imageClose"
                android:layout_gravity="end"
                android:layout_height="@dimen/_9pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_9pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_close"
                tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtGroupFortyTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@{addfoodsVM.addfoodsModel.txtGroupFortyTwo}"
                style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_food_name"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumndescreptioni"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300cornerRadius">
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtDescreptioni"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_98pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{addfoodsVM.addfoodsModel.txtDescreptioni}"
                    style="@style/txtMontserratbold12_2" tools:text="@string/msg_descreption_i"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnarrowup"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylegray_300cornerRadius">
                <ImageView android:id="@+id/imageArrowup"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_7pxh"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_8pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowup"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowup"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtQuantity"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{addfoodsVM.addfoodsModel.txtQuantity}"
                    style="@style/txtMontserratbold12_2" tools:text="@string/lbl_quantity"/>
                <ImageView android:id="@+id/imageCheckmark"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_7pxh"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginEnd="@dimen/_11pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_8pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_checkmark"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_checkmark"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSave"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_253pxh"
                android:layout_marginTop="@dimen/_44pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_19pxh"
                android:paddingStart="@dimen/_18pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/lbl_save"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline_2" tools:text="@string/lbl_save"/>
        </LinearLayout>
    </LinearLayout>
</layout>
